--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-git test
+<!doctype html>
+<html>
+<head>
+	<title>store</title>
+	<link rel='stylesheet' type='text/css' href='style.css'>
+</head>
+<body>
+<header>
+	<div class='upper-header'>
+		<div class='phone'>
+			<span class='phone-icon'></span>
+			<a href='tel:+123456789'>+1(234)56789</a>
+		</div>
+		<a class='logo' href='/'>
+			<img src='imgs/logo.png' alt='web e-shop'>
+		</a>
+		<a class='contact-us' href='#'> 
+			Contact us
+		</a>
+	</div>
+	<div class='main-header'>
+	
+	</div>
+	<nav></nav>
+</header>
+<section>
+	<div class='wrapper'>
+		<div class='cathegory-header'></div>
+		<div class='cathegory-items'></div>
+	</div>
+</section>
+<footer>
+	<div></div>
+	<div></div>
+</footer>
+</body>
+</html>
