--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!doctype html>
-<html>
+<html lang='en'>
 <head>
 	<title>store</title>
 	<link rel='stylesheet' type='text/css' href='style.css'>
 </head>
-<body>
+<body class='wrapper'>
 <header>
 	<div class='upper-header'>
-		<div class='phone'>
+		<div id='phone'>
 			<span class='phone-icon'></span>
-			<a href='tel:+123456789'>+1(234)56789</a>
+			<a href='tel:+123456789'>+1 (234) 567 89</a>
 		</div>
-		<a class='logo' href='/'>
+		<a class='logo' href='#'>
 			<img src='imgs/logo.png' alt='web e-shop'>
 		</a>
-		<a class='contact-us' href='#'> 
-			Contact us
-		</a>
+		<div class='contact-us'> 
+			<a href='#'>Contact us</a>
+		</div>
 	</div>
 	<div class='main-header'>
-	
+		<div id='header-image'></div>
+		<div id='company-name'>
+			<span id='name-text'>Online store</span>
+			<span id='desc-text'>Best prices for your favorite books and music albums</span>
+		</div>
 	</div>
-	<nav></nav>
+	<div class='lower-header'>
+		<nav>
+			Cathegory
+			<ul>
+				<li>books</li>
+				<li>music</li>
+			</ul>
+		</nav>
+		<div id='search'>
+			<input type='search'>
+			<div>
+				cathegory
+				<ul>
+					<li>books</li>
+					<li>music</li>
+				</ul>
+			</div>
+		</div>
+		<a id='card' href='#'>
+			Cart
+		</a>
+	</div>
 </header>
 <section>
-	<div class='wrapper'>
+	<div class='content-wrap'>
 		<div class='cathegory-header'></div>
 		<div class='cathegory-items'></div>
 	</div>
