lower header menu done

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		</div>
 		<div class='lower-header'>
 			<div class='content-wrap'>
-				<nav id='menu'>
+				<nav id='menu' class='white-text'>
 					Cathegory
 					<ul id='hidden-menu'>
-						<li>books</li>
-						<li>music</li>
+						<li ><a class='white-text' href='#'>books</a></li>
+						<li><a class='white-text' href='#'>music</a></li>
 					</ul>
 				</nav>
 				<div id='search'>
